k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: LoadBalancer
  selector:
    app: devops-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
